--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,30 @@ Size=400,400
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=62,48
-Size=191,48
-Collapsed=1
+Size=313,1055
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][DockSpace]
+Pos=0,0
+Size=1920,1055
+Collapsed=0
+
+[Window][Frame Rate]
+Pos=1720,0
+Size=32,32
+Collapsed=0
+
+[Window][Scene Info]
+Pos=0,0
+Size=208,1055
+Collapsed=0
+DockId=0x00000003,0
+
+[Docking][Data]
+DockSpace     ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1920,1055 Split=X
+  DockNode    ID=0x00000003 Parent=0x09EF459F SizeRef=208,1055 Selected=0xBE92F041
+  DockNode    ID=0x00000004 Parent=0x09EF459F SizeRef=1710,1055 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=313,1055 Selected=0xD00C9CD4
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=1605,1055 CentralNode=1
 
