--- a/imgui.ini
+++ b/imgui.ini
@@ -19,15 +19,29 @@ Size=32,32
 Collapsed=0
 
 [Window][Scene Info]
+Pos=0,526
+Size=435,529
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][Scene Graph]
 Pos=0,0
-Size=147,1055
+Size=435,524
 Collapsed=0
 DockId=0x00000003,0
 
+[Window][Selected mesh info]
+Pos=0,526
+Size=435,529
+Collapsed=0
+DockId=0x00000004,1
+
 [Docking][Data]
 DockSpace     ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1920,1055 Split=X
-  DockNode    ID=0x00000003 Parent=0x09EF459F SizeRef=147,1055 Selected=0xBE92F041
-  DockNode    ID=0x00000005 Parent=0x09EF459F SizeRef=1771,1055 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=313,1055 Selected=0xD00C9CD4
-    DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=1605,1055 CentralNode=1
+  DockNode    ID=0x00000006 Parent=0x09EF459F SizeRef=435,1055 Split=Y Selected=0xBE92F041
+    DockNode  ID=0x00000003 Parent=0x00000006 SizeRef=427,524 Selected=0x774F9ED4
+    DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=427,529 Selected=0x4E56BF47
+  DockNode    ID=0x00000007 Parent=0x09EF459F SizeRef=1483,1055 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=313,1055 Selected=0xD00C9CD4
+    DockNode  ID=0x00000002 Parent=0x00000007 SizeRef=1605,1055 CentralNode=1
 
