--- a/app/imgui.ini
+++ b/app/imgui.ini
@@ -8,3 +8,24 @@ Pos=60,60
 Size=191,48
 Collapsed=0
 
+[Window][Frame Rate]
+Pos=60,60
+Size=156,32
+Collapsed=0
+
+[Window][DockSpace]
+Pos=0,0
+Size=1920,1066
+Collapsed=0
+
+[Window][Scene Info]
+Pos=0,0
+Size=274,1066
+Collapsed=0
+DockId=0x00000002,0
+
+[Docking][Data]
+DockSpace   ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1920,1066 Split=X
+  DockNode  ID=0x00000002 Parent=0x09EF459F SizeRef=274,1066 Selected=0xBE92F041
+  DockNode  ID=0x00000003 Parent=0x09EF459F SizeRef=1644,1066 CentralNode=1
+
