--- a/app/imgui.ini
+++ b/app/imgui.ini
@@ -15,17 +15,27 @@ Collapsed=0
 
 [Window][DockSpace]
 Pos=0,0
-Size=1920,1066
+Size=1920,1055
 Collapsed=0
 
 [Window][Scene Info]
 Pos=0,0
-Size=274,1066
+Size=274,1055
 Collapsed=0
 DockId=0x00000002,0
 
+[Window][Selected mesh info]
+Pos=-6,216
+Size=238,218
+Collapsed=0
+
+[Window][Scene Graph]
+Pos=60,60
+Size=93,115
+Collapsed=1
+
 [Docking][Data]
-DockSpace   ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1920,1066 Split=X
+DockSpace   ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1920,1055 Split=X
   DockNode  ID=0x00000002 Parent=0x09EF459F SizeRef=274,1066 Selected=0xBE92F041
   DockNode  ID=0x00000003 Parent=0x09EF459F SizeRef=1644,1066 CentralNode=1
 
