--- a/app/imgui.ini
+++ b/app/imgui.ini
@@ -24,6 +24,16 @@ Size=274,1066
 Collapsed=0
 DockId=0x00000002,0
 
+[Window][Scene Graph]
+Pos=60,60
+Size=58,52
+Collapsed=0
+
+[Window][Selected mesh info]
+Pos=60,60
+Size=128,48
+Collapsed=0
+
 [Docking][Data]
 DockSpace   ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1920,1066 Split=X
   DockNode  ID=0x00000002 Parent=0x09EF459F SizeRef=274,1066 Selected=0xBE92F041
