--- a/app/imgui.ini
+++ b/app/imgui.ini
@@ -19,23 +19,29 @@ Size=1920,1066
 Collapsed=0
 
 [Window][Scene Info]
-Pos=0,0
-Size=274,1066
+Pos=0,309
+Size=274,707
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000005,0
 
 [Window][Scene Graph]
-Pos=60,60
-Size=58,52
+Pos=0,0
+Size=274,307
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][Selected mesh info]
-Pos=60,60
-Size=128,48
+Pos=0,1018
+Size=274,48
 Collapsed=0
+DockId=0x00000006,0
 
 [Docking][Data]
-DockSpace   ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1920,1066 Split=X
-  DockNode  ID=0x00000002 Parent=0x09EF459F SizeRef=274,1066 Selected=0xBE92F041
-  DockNode  ID=0x00000003 Parent=0x09EF459F SizeRef=1644,1066 CentralNode=1
+DockSpace       ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1920,1066 Split=X
+  DockNode      ID=0x00000002 Parent=0x09EF459F SizeRef=274,1066 Split=Y Selected=0xBE92F041
+    DockNode    ID=0x00000001 Parent=0x00000002 SizeRef=274,307 Selected=0x774F9ED4
+    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=274,757 Split=Y Selected=0xBE92F041
+      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=274,707 Selected=0xBE92F041
+      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=274,48 Selected=0x4E56BF47
+  DockNode      ID=0x00000003 Parent=0x09EF459F SizeRef=1644,1066 CentralNode=1
 
