--- a/imgui.ini
+++ b/imgui.ini
@@ -26,15 +26,15 @@ DockId=0x00000004,0
 
 [Window][Scene Graph]
 Pos=0,0
-Size=157,524
+Size=157,1055
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Selected mesh info]
 Pos=159,0
-Size=398,524
+Size=574,524
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x0000000B,0
 
 [Window][Window]
 Pos=962,0
@@ -47,16 +47,24 @@ Pos=60,60
 Size=976,575
 Collapsed=0
 
+[Window][Camera info]
+Pos=159,526
+Size=574,529
+Collapsed=0
+DockId=0x0000000C,0
+
 [Docking][Data]
-DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1920,1055 Split=X
-  DockNode        ID=0x00000008 Parent=0x09EF459F SizeRef=960,1055 Split=X
-    DockNode      ID=0x00000006 Parent=0x00000008 SizeRef=557,1055 Split=Y Selected=0xBE92F041
-      DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=427,524 Split=X Selected=0x774F9ED4
-        DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=157,524 Selected=0x774F9ED4
-        DockNode  ID=0x0000000A Parent=0x00000003 SizeRef=398,524 Selected=0x4E56BF47
-      DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=427,529 Selected=0xBE92F041
-    DockNode      ID=0x00000007 Parent=0x00000008 SizeRef=1361,1055 Split=X
-      DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=313,1055 Selected=0xD00C9CD4
-      DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=1605,1055 CentralNode=1
-  DockNode        ID=0x00000009 Parent=0x09EF459F SizeRef=958,1055 Selected=0xE8C841D3
+DockSpace           ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1906,1055 Split=X
+  DockNode          ID=0x00000008 Parent=0x09EF459F SizeRef=960,1055 Split=X
+    DockNode        ID=0x00000006 Parent=0x00000008 SizeRef=733,1055 Split=Y Selected=0xBE92F041
+      DockNode      ID=0x00000003 Parent=0x00000006 SizeRef=427,524 Split=X Selected=0x774F9ED4
+        DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=157,524 Selected=0x774F9ED4
+        DockNode    ID=0x0000000A Parent=0x00000003 SizeRef=574,524 Split=Y Selected=0x875383EC
+          DockNode  ID=0x0000000B Parent=0x0000000A SizeRef=398,524 Selected=0x4E56BF47
+          DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=398,529 Selected=0x875383EC
+      DockNode      ID=0x00000004 Parent=0x00000006 SizeRef=427,529 Selected=0xBE92F041
+    DockNode        ID=0x00000007 Parent=0x00000008 SizeRef=1171,1055 Split=X
+      DockNode      ID=0x00000001 Parent=0x00000007 SizeRef=313,1055 Selected=0xD00C9CD4
+      DockNode      ID=0x00000002 Parent=0x00000007 SizeRef=1605,1055 CentralNode=1
+  DockNode          ID=0x00000009 Parent=0x09EF459F SizeRef=958,1055 Selected=0xE8C841D3
 
