--- a/imgui.ini
+++ b/imgui.ini
@@ -26,13 +26,13 @@ DockId=0x00000004,0
 
 [Window][Scene Graph]
 Pos=0,0
-Size=285,1055
+Size=203,1055
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Selected mesh info]
-Pos=287,0
-Size=332,524
+Pos=205,0
+Size=434,247
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -48,23 +48,31 @@ Size=976,575
 Collapsed=0
 
 [Window][Camera info]
-Pos=287,526
-Size=332,529
+Pos=205,249
+Size=434,470
 Collapsed=0
-DockId=0x0000000C,0
+DockId=0x0000000D,0
+
+[Window][Console]
+Pos=205,721
+Size=434,334
+Collapsed=0
+DockId=0x0000000E,0
 
 [Docking][Data]
-DockSpace           ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1906,1055 Split=X
-  DockNode          ID=0x00000008 Parent=0x09EF459F SizeRef=960,1055 Split=X
-    DockNode        ID=0x00000006 Parent=0x00000008 SizeRef=619,1055 Split=Y Selected=0xBE92F041
-      DockNode      ID=0x00000003 Parent=0x00000006 SizeRef=427,524 Split=X Selected=0x774F9ED4
-        DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=285,524 Selected=0x774F9ED4
-        DockNode    ID=0x0000000A Parent=0x00000003 SizeRef=332,524 Split=Y Selected=0x875383EC
-          DockNode  ID=0x0000000B Parent=0x0000000A SizeRef=398,524 Selected=0x4E56BF47
-          DockNode  ID=0x0000000C Parent=0x0000000A SizeRef=398,529 Selected=0x875383EC
-      DockNode      ID=0x00000004 Parent=0x00000006 SizeRef=427,529 Selected=0xBE92F041
-    DockNode        ID=0x00000007 Parent=0x00000008 SizeRef=1285,1055 Split=X
-      DockNode      ID=0x00000001 Parent=0x00000007 SizeRef=313,1055 Selected=0xD00C9CD4
-      DockNode      ID=0x00000002 Parent=0x00000007 SizeRef=1605,1055 CentralNode=1
-  DockNode          ID=0x00000009 Parent=0x09EF459F SizeRef=958,1055 Selected=0xE8C841D3
+DockSpace             ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1906,1055 Split=X
+  DockNode            ID=0x00000008 Parent=0x09EF459F SizeRef=960,1055 Split=X
+    DockNode          ID=0x00000006 Parent=0x00000008 SizeRef=639,1055 Split=Y Selected=0xBE92F041
+      DockNode        ID=0x00000003 Parent=0x00000006 SizeRef=427,524 Split=X Selected=0x774F9ED4
+        DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=203,524 Selected=0x774F9ED4
+        DockNode      ID=0x0000000A Parent=0x00000003 SizeRef=434,524 Split=Y Selected=0x875383EC
+          DockNode    ID=0x0000000B Parent=0x0000000A SizeRef=398,247 Selected=0x4E56BF47
+          DockNode    ID=0x0000000C Parent=0x0000000A SizeRef=398,806 Split=Y Selected=0x875383EC
+            DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=332,470 Selected=0x875383EC
+            DockNode  ID=0x0000000E Parent=0x0000000C SizeRef=332,334 Selected=0x49278EEE
+      DockNode        ID=0x00000004 Parent=0x00000006 SizeRef=427,529 Selected=0xBE92F041
+    DockNode          ID=0x00000007 Parent=0x00000008 SizeRef=1265,1055 Split=X
+      DockNode        ID=0x00000001 Parent=0x00000007 SizeRef=313,1055 Selected=0xD00C9CD4
+      DockNode        ID=0x00000002 Parent=0x00000007 SizeRef=1605,1055 CentralNode=1
+  DockNode            ID=0x00000009 Parent=0x09EF459F SizeRef=958,1055 Selected=0xE8C841D3
 
