--- a/app/imgui.ini
+++ b/app/imgui.ini
@@ -19,39 +19,51 @@ Size=1920,1055
 Collapsed=0
 
 [Window][Scene Info]
-Pos=0,0
 Size=274,1055
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Scene Graph]
 Pos=0,0
-Size=274,307
+Size=500,450
 Collapsed=0
-DockId=0x00000001,0
 
 [Window][Selected mesh info]
-Pos=0,1018
-Size=274,48
-Collapsed=0
-DockId=0x00000006,0
-
-[Window][Selected mesh info]
-Pos=-6,216
-Size=238,218
+Pos=0,455
+Size=500,200
 Collapsed=0
 
-[Window][Scene Graph]
-Pos=60,60
-Size=93,115
-Collapsed=1
+[Window][Console]
+Pos=0,805
+Size=500,200
+Collapsed=0
+
+[Window][Camera info]
+Pos=0,655
+Size=500,150
+Collapsed=0
+
+[Window][Console Log]
+Collapsed=0
+DockId=0x09EF459F
+
+[Window][Light info]
+Pos=405,476
+Size=89,36
+Collapsed=0
 
 [Docking][Data]
-DockSpace       ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1920,1066 Split=X
-  DockNode      ID=0x00000002 Parent=0x09EF459F SizeRef=274,1066 Split=Y Selected=0xBE92F041
-    DockNode    ID=0x00000001 Parent=0x00000002 SizeRef=274,307 Selected=0x774F9ED4
-    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=274,757 Split=Y Selected=0xBE92F041
-      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=274,707 Selected=0xBE92F041
-      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=274,48 Selected=0x4E56BF47
-  DockNode      ID=0x00000003 Parent=0x09EF459F SizeRef=1644,1066 CentralNode=1
+DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1920,1055 Split=X
+  DockNode        ID=0x00000007 Parent=0x09EF459F SizeRef=568,1055 Split=Y Selected=0x774F9ED4
+    DockNode      ID=0x00000009 Parent=0x00000007 SizeRef=299,667 Split=Y Selected=0x774F9ED4
+      DockNode    ID=0x0000000B Parent=0x00000009 SizeRef=432,549 Selected=0x774F9ED4
+      DockNode    ID=0x0000000C Parent=0x00000009 SizeRef=432,504 Selected=0x4E56BF47
+    DockNode      ID=0x0000000A Parent=0x00000007 SizeRef=299,386 Selected=0x49278EEE
+  DockNode        ID=0x00000008 Parent=0x09EF459F SizeRef=1336,1055 Split=X
+    DockNode      ID=0x00000002 Parent=0x00000008 SizeRef=274,1066 Split=Y Selected=0xBE92F041
+      DockNode    ID=0x00000001 Parent=0x00000002 SizeRef=274,307 Selected=0x774F9ED4
+      DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=274,757 Split=Y Selected=0xBE92F041
+        DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=274,707 Selected=0xBE92F041
+        DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=274,48 Selected=0x4E56BF47
+    DockNode      ID=0x00000003 Parent=0x00000008 SizeRef=1644,1066 CentralNode=1
 
