--- a/imgui.ini
+++ b/imgui.ini
@@ -1,12 +1,11 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=99,4
+Size=1920,983
 Collapsed=0
 
 [Window][Hello, world!]
 Size=313,1055
 Collapsed=0
-DockId=0x00000001,0
 
 [Window][DockSpace]
 Pos=0,0
@@ -19,28 +18,25 @@ Size=32,32
 Collapsed=0
 
 [Window][Scene Info]
-Pos=0,526
-Size=557,529
+Size=441,729
 Collapsed=0
-DockId=0x00000004,0
 
 [Window][Scene Graph]
 Pos=0,0
-Size=133,1055
+Size=360,888
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000007,0
 
 [Window][Selected mesh info]
-Pos=135,0
-Size=432,536
+Pos=0,0
+Size=360,888
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000007,1
 
 [Window][Window]
 Pos=962,0
 Size=958,1055
 Collapsed=0
-DockId=0x00000009,0
 
 [Window][Render FrameBuffer]
 Pos=60,60
@@ -48,31 +44,36 @@ Size=976,575
 Collapsed=0
 
 [Window][Camera info]
-Pos=135,538
-Size=432,181
+Pos=0,0
+Size=360,888
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x00000007,2
 
 [Window][Console]
-Pos=135,721
-Size=432,334
+Pos=0,890
+Size=1920,165
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x00000004,0
+
+[Window][Scene]
+Pos=362,0
+Size=1558,888
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][Light]
+Pos=0,775
+Size=360,113
+Collapsed=0
 
 [Docking][Data]
-DockSpace             ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1906,1055 Split=X
-  DockNode            ID=0x00000008 Parent=0x09EF459F SizeRef=960,1055 Split=X
-    DockNode          ID=0x00000006 Parent=0x00000008 SizeRef=567,1055 Split=Y Selected=0xBE92F041
-      DockNode        ID=0x00000003 Parent=0x00000006 SizeRef=427,524 Split=X Selected=0x774F9ED4
-        DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=133,524 Selected=0x774F9ED4
-        DockNode      ID=0x0000000A Parent=0x00000003 SizeRef=432,524 Split=Y Selected=0x875383EC
-          DockNode    ID=0x0000000B Parent=0x0000000A SizeRef=398,536 Selected=0x4E56BF47
-          DockNode    ID=0x0000000C Parent=0x0000000A SizeRef=398,517 Split=Y Selected=0x875383EC
-            DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=332,181 Selected=0x875383EC
-            DockNode  ID=0x0000000E Parent=0x0000000C SizeRef=332,334 Selected=0x49278EEE
-      DockNode        ID=0x00000004 Parent=0x00000006 SizeRef=427,529 Selected=0xBE92F041
-    DockNode          ID=0x00000007 Parent=0x00000008 SizeRef=951,1055 Split=X
-      DockNode        ID=0x00000001 Parent=0x00000007 SizeRef=313,1055 Selected=0xD00C9CD4
-      DockNode        ID=0x00000002 Parent=0x00000007 SizeRef=1605,1055 CentralNode=1
-  DockNode            ID=0x00000009 Parent=0x09EF459F SizeRef=958,1055 Selected=0xE8C841D3
+DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1920,1055 Split=Y
+  DockNode        ID=0x00000001 Parent=0x09EF459F SizeRef=0,12
+  DockNode        ID=0x00000002 Parent=0x09EF459F SizeRef=0,52 Split=Y
+    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=0,54 Split=X
+      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=12,0 Split=X
+        DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=12,0 Selected=0x875383EC
+        DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=52,0
+      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=52,0 Selected=0xE192E354
+    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=0,10 Selected=0x49278EEE
 
