--- a/app/imgui.ini
+++ b/app/imgui.ini
@@ -24,15 +24,15 @@ Collapsed=0
 
 [Window][Scene Graph]
 Pos=0,0
-Size=360,888
+Size=360,532
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000009,0
 
 [Window][Selected mesh info]
-Pos=0,0
-Size=360,888
+Pos=0,534
+Size=360,354
 Collapsed=0
-DockId=0x00000007,1
+DockId=0x0000000A,0
 
 [Window][Console]
 Pos=0,890
@@ -42,9 +42,9 @@ DockId=0x00000004,0
 
 [Window][Camera info]
 Pos=0,0
-Size=360,888
+Size=360,532
 Collapsed=0
-DockId=0x00000007,2
+DockId=0x00000009,1
 
 [Window][Console Log]
 Collapsed=0
@@ -60,14 +60,21 @@ Size=1558,888
 Collapsed=0
 DockId=0x00000006,0
 
+[Window][Light]
+Pos=1,717
+Size=360,104
+Collapsed=0
+
 [Docking][Data]
-DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1920,1055 Split=Y
-  DockNode        ID=0x00000001 Parent=0x09EF459F SizeRef=0,12
-  DockNode        ID=0x00000002 Parent=0x09EF459F SizeRef=0,52 Split=Y
-    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=0,54 Split=X
-      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=12,0 Split=X
-        DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=12,0 Selected=0x875383EC
-        DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=52,0
-      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=52,0 Selected=0xE192E354
-    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=0,10 Selected=0x49278EEE
+DockSpace           ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1920,1055 Split=Y
+  DockNode          ID=0x00000001 Parent=0x09EF459F SizeRef=0,12
+  DockNode          ID=0x00000002 Parent=0x09EF459F SizeRef=0,52 Split=Y
+    DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=0,54 Split=X
+      DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=12,0 Split=X
+        DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=12,0 Split=Y Selected=0x774F9ED4
+          DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=360,532 Selected=0x774F9ED4
+          DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=360,354 Selected=0x4E56BF47
+        DockNode    ID=0x00000008 Parent=0x00000005 SizeRef=52,0
+      DockNode      ID=0x00000006 Parent=0x00000003 SizeRef=52,0 Selected=0xE192E354
+    DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=0,10 Selected=0x49278EEE
 
