--- a/app/imgui.ini
+++ b/app/imgui.ini
@@ -61,8 +61,8 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][Light]
-Pos=365,784
-Size=360,104
+Pos=373,796
+Size=360,92
 Collapsed=0
 
 [Docking][Data]
@@ -71,7 +71,7 @@ DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1920,1055 Split=Y
   DockNode        ID=0x00000002 Parent=0x09EF459F SizeRef=0,52 Split=Y
     DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=0,54 Split=X
       DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=12,0 Split=X
-        DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=12,0 Selected=0x875383EC
+        DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=12,0 Selected=0x774F9ED4
         DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=52,0
       DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=52,0 Selected=0xE192E354
     DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=0,10 Selected=0x49278EEE
