[FIX] improve  (but not totally) the orientation of the cart while is animated

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,7 @@ Collapsed=0
 
 [Window][DockSpace]
 Pos=0,0
-Size=1920,1057
+Size=1920,1055
 Collapsed=0
 
 [Window][Frame Rate]
@@ -23,15 +23,15 @@ Collapsed=0
 
 [Window][Scene Graph]
 Pos=0,0
-Size=469,890
+Size=360,444
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000009,0
 
 [Window][Selected mesh info]
-Pos=0,0
-Size=469,890
+Pos=0,446
+Size=360,442
 Collapsed=0
-DockId=0x00000007,1
+DockId=0x0000000A,0
 
 [Window][Window]
 Pos=962,0
@@ -45,19 +45,19 @@ Collapsed=0
 
 [Window][Camera info]
 Pos=0,0
-Size=469,890
+Size=360,444
 Collapsed=0
-DockId=0x00000007,2
+DockId=0x00000009,1
 
 [Window][Console]
-Pos=0,892
+Pos=0,890
 Size=1920,165
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Scene]
-Pos=471,0
-Size=1449,890
+Pos=362,0
+Size=1558,888
 Collapsed=0
 DockId=0x00000006,0
 
@@ -73,20 +73,22 @@ Size=102,54
 Collapsed=0
 
 [Docking][Data]
-DockNode          ID=0x0000000B Pos=0,633 Size=360,248 Split=Y
-  DockNode        ID=0x0000000C Parent=0x0000000B SizeRef=360,86 Split=Y Selected=0x1F6D3E3A
-    DockNode      ID=0x0000000E Parent=0x0000000C SizeRef=360,86 Split=Y Selected=0x1F6D3E3A
-      DockNode    ID=0x00000010 Parent=0x0000000E SizeRef=360,86 Selected=0x1F6D3E3A
-      DockNode    ID=0x00000011 Parent=0x0000000E SizeRef=360,84 Selected=0x875383EC
-    DockNode      ID=0x0000000F Parent=0x0000000C SizeRef=360,84 Selected=0x875383EC
-  DockNode        ID=0x0000000D Parent=0x0000000B SizeRef=360,84 Selected=0x875383EC
-DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1920,1057 Split=Y
-  DockNode        ID=0x00000001 Parent=0x09EF459F SizeRef=0,12
-  DockNode        ID=0x00000002 Parent=0x09EF459F SizeRef=0,52 Split=Y
-    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=0,54 Split=X
-      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=469,0 Split=X
-        DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=12,0 Selected=0x774F9ED4
-        DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=52,0
-      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=1449,0 Selected=0xE192E354
-    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=0,10 Selected=0x49278EEE
+DockNode            ID=0x0000000B Pos=0,633 Size=360,248 Split=Y
+  DockNode          ID=0x0000000C Parent=0x0000000B SizeRef=360,86 Split=Y Selected=0x1F6D3E3A
+    DockNode        ID=0x0000000E Parent=0x0000000C SizeRef=360,86 Split=Y Selected=0x1F6D3E3A
+      DockNode      ID=0x00000010 Parent=0x0000000E SizeRef=360,86 Selected=0x1F6D3E3A
+      DockNode      ID=0x00000011 Parent=0x0000000E SizeRef=360,84 Selected=0x875383EC
+    DockNode        ID=0x0000000F Parent=0x0000000C SizeRef=360,84 Selected=0x875383EC
+  DockNode          ID=0x0000000D Parent=0x0000000B SizeRef=360,84 Selected=0x875383EC
+DockSpace           ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1920,1055 Split=Y
+  DockNode          ID=0x00000001 Parent=0x09EF459F SizeRef=0,12
+  DockNode          ID=0x00000002 Parent=0x09EF459F SizeRef=0,52 Split=Y
+    DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=0,54 Split=X
+      DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=12,0 Split=X
+        DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=12,0 Split=Y Selected=0x774F9ED4
+          DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=360,444 Selected=0x774F9ED4
+          DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=360,442 Selected=0x4E56BF47
+        DockNode    ID=0x00000008 Parent=0x00000005 SizeRef=52,0
+      DockNode      ID=0x00000006 Parent=0x00000003 SizeRef=52,0 Selected=0xE192E354
+    DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=0,10 Selected=0x49278EEE
 
