--- a/imgui.ini
+++ b/imgui.ini
@@ -22,16 +22,16 @@ Size=441,729
 Collapsed=0
 
 [Window][Scene Graph]
-Pos=0,0
-Size=360,444
+Pos=0,330
+Size=360,558
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x0000000C,0
 
 [Window][Selected mesh info]
-Pos=0,446
-Size=360,442
+Pos=0,166
+Size=360,162
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x0000000B,0
 
 [Window][Window]
 Pos=962,0
@@ -44,10 +44,10 @@ Size=976,575
 Collapsed=0
 
 [Window][Camera info]
-Pos=0,0
-Size=360,444
+Pos=0,330
+Size=360,558
 Collapsed=0
-DockId=0x00000009,1
+DockId=0x0000000C,1
 
 [Window][Console]
 Pos=0,890
@@ -62,33 +62,28 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][Light]
-Pos=0,633
-Size=360,248
+Pos=0,0
+Size=360,164
 Collapsed=0
-DockId=0x00000010,0
+DockId=0x0000000A,0
 
 [Window][Animation]
-Pos=153,272
-Size=102,54
+Pos=411,183
+Size=249,54
 Collapsed=0
 
 [Docking][Data]
-DockNode            ID=0x0000000B Pos=0,633 Size=360,248 Split=Y
-  DockNode          ID=0x0000000C Parent=0x0000000B SizeRef=360,86 Split=Y Selected=0x1F6D3E3A
-    DockNode        ID=0x0000000E Parent=0x0000000C SizeRef=360,86 Split=Y Selected=0x1F6D3E3A
-      DockNode      ID=0x00000010 Parent=0x0000000E SizeRef=360,86 Selected=0x1F6D3E3A
-      DockNode      ID=0x00000011 Parent=0x0000000E SizeRef=360,84 Selected=0x875383EC
-    DockNode        ID=0x0000000F Parent=0x0000000C SizeRef=360,84 Selected=0x875383EC
-  DockNode          ID=0x0000000D Parent=0x0000000B SizeRef=360,84 Selected=0x875383EC
-DockSpace           ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1920,1055 Split=Y
-  DockNode          ID=0x00000001 Parent=0x09EF459F SizeRef=0,12
-  DockNode          ID=0x00000002 Parent=0x09EF459F SizeRef=0,52 Split=Y
-    DockNode        ID=0x00000003 Parent=0x00000002 SizeRef=0,54 Split=X
-      DockNode      ID=0x00000005 Parent=0x00000003 SizeRef=12,0 Split=X
-        DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=12,0 Split=Y Selected=0x774F9ED4
-          DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=360,444 Selected=0x774F9ED4
-          DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=360,442 Selected=0x4E56BF47
-        DockNode    ID=0x00000008 Parent=0x00000005 SizeRef=52,0
-      DockNode      ID=0x00000006 Parent=0x00000003 SizeRef=52,0 Selected=0xE192E354
-    DockNode        ID=0x00000004 Parent=0x00000002 SizeRef=0,10 Selected=0x49278EEE
+DockSpace             ID=0x09EF459F Window=0x9A404470 Pos=0,0 Size=1920,1055 Split=Y
+  DockNode            ID=0x00000001 Parent=0x09EF459F SizeRef=0,12
+  DockNode            ID=0x00000002 Parent=0x09EF459F SizeRef=0,52 Split=Y
+    DockNode          ID=0x00000003 Parent=0x00000002 SizeRef=0,54 Split=X
+      DockNode        ID=0x00000005 Parent=0x00000003 SizeRef=12,0 Split=X
+        DockNode      ID=0x00000007 Parent=0x00000005 SizeRef=12,0 Split=Y Selected=0x774F9ED4
+          DockNode    ID=0x00000009 Parent=0x00000007 SizeRef=360,328 Split=Y Selected=0x1F6D3E3A
+            DockNode  ID=0x0000000A Parent=0x00000009 SizeRef=360,164 Selected=0x1F6D3E3A
+            DockNode  ID=0x0000000B Parent=0x00000009 SizeRef=360,162 Selected=0x4E56BF47
+          DockNode    ID=0x0000000C Parent=0x00000007 SizeRef=360,558 Selected=0x774F9ED4
+        DockNode      ID=0x00000008 Parent=0x00000005 SizeRef=52,0
+      DockNode        ID=0x00000006 Parent=0x00000003 SizeRef=52,0 Selected=0xE192E354
+    DockNode          ID=0x00000004 Parent=0x00000002 SizeRef=0,10 Selected=0x49278EEE
 
