--- a/imgui.ini
+++ b/imgui.ini
@@ -8,7 +8,6 @@ Size=313,1055
 Collapsed=0
 
 [Window][DockSpace]
-Pos=0,0
 Size=1920,1055
 Collapsed=0
 
@@ -22,16 +21,15 @@ Size=441,729
 Collapsed=0
 
 [Window][Scene Graph]
-Pos=0,0
-Size=360,888
+Pos=143,124
+Size=523,769
 Collapsed=0
-DockId=0x00000007,1
 
 [Window][Selected mesh info]
 Pos=0,166
 Size=360,162
 Collapsed=0
-DockId=0x00000007
+DockId=0x00000008
 
 [Window][Window]
 Pos=962,0
@@ -44,28 +42,26 @@ Size=976,575
 Collapsed=0
 
 [Window][Camera info]
-Pos=0,0
-Size=360,888
+Pos=1533,22
+Size=387,603
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000001A,0
 
 [Window][Console]
-Pos=0,890
-Size=1920,165
+Pos=1379,352
+Size=533,157
 Collapsed=0
-DockId=0x00000004,0
 
 [Window][Scene]
-Pos=362,0
-Size=1558,888
+Pos=299,60
+Size=1219,771
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000021,0
 
 [Window][Light]
-Pos=11,623
-Size=360,274
+Pos=1039,0
+Size=470,888
 Collapsed=0
-DockId=0x0000000D,0
 
 [Window][Animation]
 Pos=411,183
@@ -73,10 +69,10 @@ Size=249,54
 Collapsed=0
 
 [Window][Render]
-Pos=11,382
-Size=360,32
+Pos=562,67
+Size=387,1033
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x0000001B,0
 
 [Window][Selected Mesh Properties]
 Pos=360,362
@@ -97,23 +93,147 @@ Collapsed=0
 Pos=11,416
 Size=360,205
 Collapsed=0
-DockId=0x0000000B,0
+
+[Window][Sidebar]
+Size=360,666
+Collapsed=0
+
+[Window][Light info]
+Pos=1471,89
+Size=362,1033
+Collapsed=0
+
+[Window][MainDockspace]
+Pos=0,0
+Size=1920,1055
+Collapsed=0
+
+[Window][SecondDockSpace]
+Size=360,888
+Collapsed=0
+DockId=0x00000005
+
+[Window][SidebarDockspace]
+Pos=60,60
+Size=32,32
+Collapsed=0
+
+[Window][Camera]
+Collapsed=0
+
+[Window][SecondDockspace]
+Pos=879,0
+Size=1041,1055
+Collapsed=0
+
+[Window][Scene graph]
+Pos=24,68
+Size=265,377
+Collapsed=0
+DockId=0x00000018,0
+
+[Window][Selected mesh]
+Pos=24,447
+Size=265,376
+Collapsed=0
+DockId=0x00000016
+
+[Window][Scene Graph Dockspace]
+Pos=60,60
+Size=424,479
+Collapsed=0
+
+[Window][Scene infos]
+Pos=16,60
+Size=281,771
+Collapsed=0
+DockId=0x0000001E,0
+
+[Window][Render infos]
+Pos=1544,30
+Size=368,357
+Collapsed=0
+DockId=0x00000014,0
+
+[Window][Light infos]
+Pos=1544,389
+Size=368,244
+Collapsed=0
+DockId=0x00000013,0
+
+[Window][Camera infos]
+Pos=1544,635
+Size=368,412
+Collapsed=0
+DockId=0x0000000D,0
+
+[Window][Render dockspace]
+Pos=1536,0
+Size=384,1055
+Collapsed=0
+DockId=0x0000001D,0
+
+[Window][Console logs]
+Pos=8,841
+Size=1518,206
+Collapsed=0
+DockId=0x00000023,0
+
+[Window][Scene dockspace]
+Pos=8,30
+Size=1518,809
+Collapsed=0
+DockId=0x00000024,0
+
+[Window][Scene Console dockspace]
+Pos=0,0
+Size=1534,1055
+Collapsed=0
+DockId=0x0000000E,0
 
 [Docking][Data]
-DockNode          ID=0x00000009 Pos=11,382 Size=360,515 Split=Y
-  DockNode        ID=0x0000000E Parent=0x00000009 SizeRef=360,435 Split=Y
-    DockNode      ID=0x0000000C Parent=0x0000000E SizeRef=360,202 Split=Y
-      DockNode    ID=0x0000000A Parent=0x0000000C SizeRef=360,32 Selected=0x81AED595
-      DockNode    ID=0x0000000B Parent=0x0000000C SizeRef=360,205 Selected=0x94A43473
-    DockNode      ID=0x0000000D Parent=0x0000000E SizeRef=360,231 Selected=0x1F6D3E3A
-  DockNode        ID=0x0000000F Parent=0x00000009 SizeRef=360,233 Selected=0x875383EC
-DockSpace         ID=0x578CAA54 Window=0x9A404470 Pos=0,0 Size=1920,1055 Split=Y
-  DockNode        ID=0x00000001 Parent=0x578CAA54 SizeRef=0,12
-  DockNode        ID=0x00000002 Parent=0x578CAA54 SizeRef=0,52 Split=Y
-    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=0,54 Split=X
-      DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=12,0 Split=X
-        DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=12,0 Selected=0x774F9ED4
-        DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=52,0
-      DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=52,0 Selected=0xE192E354
-    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=0,10 Selected=0x49278EEE
+DockNode        ID=0x00000009 Pos=562,67 Size=387,1033 Split=Y
+  DockNode      ID=0x0000001A Parent=0x00000009 SizeRef=387,603 Selected=0x875383EC
+  DockNode      ID=0x0000001B Parent=0x00000009 SizeRef=387,428 Selected=0x81AED595
+DockSpace       ID=0x5C52A707 Window=0x9554D0DC Pos=24,68 Size=265,755 Split=Y
+  DockNode      ID=0x00000015 Parent=0x5C52A707 SizeRef=0,32 Split=Y
+    DockNode    ID=0x00000018 Parent=0x00000015 SizeRef=0,32 Selected=0xF5BE1C77
+    DockNode    ID=0x00000019 Parent=0x00000015 SizeRef=0,32
+  DockNode      ID=0x00000016 Parent=0x5C52A707 SizeRef=0,32 Selected=0x6DD25625
+DockSpace       ID=0x6E363A1D Window=0x1F1D7494 Pos=0,0 Size=1920,1055 Split=X
+  DockNode      ID=0x0000000E Parent=0x6E363A1D SizeRef=1534,1055 Selected=0xCB61E75E
+  DockNode      ID=0x00000011 Parent=0x6E363A1D SizeRef=384,1055 Split=X
+    DockNode    ID=0x0000001C Parent=0x00000011 SizeRef=305,1055
+    DockNode    ID=0x0000001D Parent=0x00000011 SizeRef=77,1055 Selected=0xD0BC208B
+DockSpace       ID=0x8673A6EC Window=0x3D6C39D8 Pos=1544,30 Size=368,1017 Split=Y
+  DockNode      ID=0x0000000A Parent=0x8673A6EC SizeRef=0,38 Split=Y
+    DockNode    ID=0x00000012 Parent=0x0000000A SizeRef=0,38 Split=Y
+      DockNode  ID=0x00000014 Parent=0x00000012 SizeRef=0,12 Selected=0x3080C7DC
+      DockNode  ID=0x00000017 Parent=0x00000012 SizeRef=0,52
+    DockNode    ID=0x00000013 Parent=0x0000000A SizeRef=0,26 Selected=0x14BB463B
+  DockNode      ID=0x0000000D Parent=0x8673A6EC SizeRef=0,26 Selected=0x1CD05757
+DockSpace       ID=0x9E835BE9 Pos=0,0 Size=1920,1055 Split=Y
+  DockNode      ID=0x00000001 Parent=0x9E835BE9 SizeRef=0,54 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=12,0 Split=X
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=12,0
+      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=52,0
+    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=52,0 Selected=0xE192E354
+  DockNode      ID=0x00000002 Parent=0x9E835BE9 SizeRef=0,10 Selected=0x49278EEE
+DockSpace       ID=0xA21CAF6A Pos=60,60 Size=32,32 Split=Y
+  DockNode      ID=0x00000007 Parent=0xA21CAF6A SizeRef=0,54 Split=Y
+    DockNode    ID=0x0000000B Parent=0x00000007 SizeRef=0,54 Split=Y
+      DockNode  ID=0x0000000F Parent=0x0000000B SizeRef=0,12 Selected=0x774F9ED4
+      DockNode  ID=0x00000010 Parent=0x0000000B SizeRef=0,52
+    DockNode    ID=0x0000000C Parent=0x00000007 SizeRef=0,10
+  DockNode      ID=0x00000008 Parent=0xA21CAF6A SizeRef=0,10
+DockSpace       ID=0xB7B5E377 Window=0x7EAA9075 Pos=8,30 Size=1518,1017 Split=Y
+  DockNode      ID=0x00000022 Parent=0xB7B5E377 SizeRef=0,51 Split=Y
+    DockNode    ID=0x00000024 Parent=0x00000022 SizeRef=0,51 Selected=0x433EF69B
+    DockNode    ID=0x00000025 Parent=0x00000022 SizeRef=0,13
+  DockNode      ID=0x00000023 Parent=0xB7B5E377 SizeRef=0,13 Selected=0xF14F0B90
+DockSpace       ID=0xB8EF20DE Window=0x3B9335D6 Pos=16,60 Size=1502,771 Split=X
+  DockNode      ID=0x0000001E Parent=0xB8EF20DE SizeRef=12,0 Selected=0x367FCBD2
+  DockNode      ID=0x0000001F Parent=0xB8EF20DE SizeRef=52,0 Split=X
+    DockNode    ID=0x00000020 Parent=0x0000001F SizeRef=12,0
+    DockNode    ID=0x00000021 Parent=0x0000001F SizeRef=52,0 Selected=0xE192E354
 
