test rotations for rails

--- a/imgui.ini
+++ b/imgui.ini
@@ -53,8 +53,8 @@ Size=533,157
 Collapsed=0
 
 [Window][Scene]
-Pos=299,16
-Size=1219,759
+Pos=307,22
+Size=1323,773
 Collapsed=0
 DockId=0x00000021,0
 
@@ -105,7 +105,7 @@ Collapsed=0
 
 [Window][MainDockspace]
 Pos=0,0
-Size=1920,991
+Size=1920,1055
 Collapsed=0
 
 [Window][SecondDockSpace]
@@ -127,14 +127,14 @@ Size=1041,1055
 Collapsed=0
 
 [Window][Scene graph]
-Pos=24,24
-Size=265,371
+Pos=8,30
+Size=289,378
 Collapsed=0
 DockId=0x00000018,0
 
 [Window][Selected mesh]
-Pos=24,397
-Size=265,370
+Pos=8,410
+Size=289,377
 Collapsed=0
 DockId=0x00000016
 
@@ -144,50 +144,50 @@ Size=424,479
 Collapsed=0
 
 [Window][Scene infos]
-Pos=16,16
-Size=281,759
+Pos=0,22
+Size=305,773
 Collapsed=0
 DockId=0x0000001E,0
 
 [Window][Render infos]
-Pos=1544,8
-Size=368,342
+Pos=1632,22
+Size=288,369
 Collapsed=0
 DockId=0x00000014,0
 
 [Window][Light infos]
-Pos=1544,352
-Size=368,234
+Pos=1632,393
+Size=288,247
 Collapsed=0
 DockId=0x00000013,0
 
 [Window][Camera infos]
-Pos=1544,588
-Size=368,395
+Pos=1632,642
+Size=288,413
 Collapsed=0
 DockId=0x0000000D,0
 
 [Window][Render dockspace]
-Pos=1536,0
-Size=384,991
+Pos=1632,0
+Size=288,1055
 Collapsed=0
 DockId=0x0000001D,0
 
 [Window][Console logs]
-Pos=8,785
-Size=1518,198
+Pos=0,797
+Size=1630,258
 Collapsed=0
 DockId=0x00000023,0
 
 [Window][Scene dockspace]
-Pos=8,8
-Size=1518,775
+Pos=0,22
+Size=1630,773
 Collapsed=0
 DockId=0x00000024,0
 
 [Window][Scene Console dockspace]
 Pos=0,0
-Size=1534,991
+Size=1630,1055
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -195,23 +195,23 @@ DockId=0x0000000E,0
 DockNode        ID=0x00000009 Pos=562,67 Size=387,1033 Split=Y
   DockNode      ID=0x0000001A Parent=0x00000009 SizeRef=387,603 Selected=0x875383EC
   DockNode      ID=0x0000001B Parent=0x00000009 SizeRef=387,428 Selected=0x81AED595
-DockSpace       ID=0x5C52A707 Window=0x9554D0DC Pos=24,24 Size=265,743 Split=Y
+DockSpace       ID=0x5C52A707 Window=0x9554D0DC Pos=8,30 Size=289,757 Split=Y
   DockNode      ID=0x00000015 Parent=0x5C52A707 SizeRef=0,32 Split=Y
     DockNode    ID=0x00000018 Parent=0x00000015 SizeRef=0,32 Selected=0xF5BE1C77
     DockNode    ID=0x00000019 Parent=0x00000015 SizeRef=0,32
   DockNode      ID=0x00000016 Parent=0x5C52A707 SizeRef=0,32 Selected=0x6DD25625
-DockSpace       ID=0x6E363A1D Window=0x1F1D7494 Pos=0,0 Size=1920,991 Split=X
-  DockNode      ID=0x0000000E Parent=0x6E363A1D SizeRef=1534,1055 HiddenTabBar=1 Selected=0xCB61E75E
-  DockNode      ID=0x00000011 Parent=0x6E363A1D SizeRef=384,1055 Split=X
-    DockNode    ID=0x0000001C Parent=0x00000011 SizeRef=305,1055
-    DockNode    ID=0x0000001D Parent=0x00000011 SizeRef=77,1055 HiddenTabBar=1 Selected=0xD0BC208B
-DockSpace       ID=0x8673A6EC Window=0x3D6C39D8 Pos=1544,8 Size=368,975 Split=Y
-  DockNode      ID=0x0000000A Parent=0x8673A6EC SizeRef=0,38 Split=Y
-    DockNode    ID=0x00000012 Parent=0x0000000A SizeRef=0,38 Split=Y
-      DockNode  ID=0x00000014 Parent=0x00000012 SizeRef=0,12 Selected=0x3080C7DC
-      DockNode  ID=0x00000017 Parent=0x00000012 SizeRef=0,52
-    DockNode    ID=0x00000013 Parent=0x0000000A SizeRef=0,26 Selected=0x14BB463B
-  DockNode      ID=0x0000000D Parent=0x8673A6EC SizeRef=0,26 Selected=0x1CD05757
+DockSpace       ID=0x6E363A1D Window=0x1F1D7494 Pos=0,0 Size=1920,1055 Split=X
+  DockNode      ID=0x0000000E Parent=0x6E363A1D SizeRef=1630,1055 Selected=0xCB61E75E
+  DockNode      ID=0x00000011 Parent=0x6E363A1D SizeRef=288,1055 Split=X
+    DockNode    ID=0x0000001C Parent=0x00000011 SizeRef=243,1055
+    DockNode    ID=0x0000001D Parent=0x00000011 SizeRef=43,1055 Selected=0xD0BC208B
+DockSpace       ID=0x8673A6EC Window=0x3D6C39D8 Pos=1632,22 Size=288,1033 Split=Y
+  DockNode      ID=0x0000000A Parent=0x8673A6EC SizeRef=1920,631 Split=Y
+    DockNode    ID=0x00000012 Parent=0x0000000A SizeRef=1920,377 Split=Y
+      DockNode  ID=0x00000014 Parent=0x00000012 SizeRef=1920,75 Selected=0x3080C7DC
+      DockNode  ID=0x00000017 Parent=0x00000012 SizeRef=1920,300
+    DockNode    ID=0x00000013 Parent=0x0000000A SizeRef=1920,252 Selected=0x14BB463B
+  DockNode      ID=0x0000000D Parent=0x8673A6EC SizeRef=1920,422 Selected=0x1CD05757
 DockSpace       ID=0x9E835BE9 Pos=0,0 Size=1920,1055 Split=Y
   DockNode      ID=0x00000001 Parent=0x9E835BE9 SizeRef=0,54 Split=X
     DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=12,0 Split=X
@@ -226,12 +226,12 @@ DockSpace       ID=0xA21CAF6A Pos=60,60 Size=32,32 Split=Y
       DockNode  ID=0x00000010 Parent=0x0000000B SizeRef=0,52
     DockNode    ID=0x0000000C Parent=0x00000007 SizeRef=0,10
   DockNode      ID=0x00000008 Parent=0xA21CAF6A SizeRef=0,10
-DockSpace       ID=0xB7B5E377 Window=0x7EAA9075 Pos=8,8 Size=1518,975 Split=Y
-  DockNode      ID=0x00000022 Parent=0xB7B5E377 SizeRef=0,51 Split=Y
-    DockNode    ID=0x00000024 Parent=0x00000022 SizeRef=0,51 HiddenTabBar=1 Selected=0x433EF69B
-    DockNode    ID=0x00000025 Parent=0x00000022 SizeRef=0,13
-  DockNode      ID=0x00000023 Parent=0xB7B5E377 SizeRef=0,13 Selected=0xF14F0B90
-DockSpace       ID=0xB8EF20DE Window=0x3B9335D6 Pos=16,16 Size=1502,759 Split=X
+DockSpace       ID=0xB7B5E377 Window=0x7EAA9075 Pos=0,22 Size=1630,1033 Split=Y
+  DockNode      ID=0x00000022 Parent=0xB7B5E377 SizeRef=0,48 Split=Y
+    DockNode    ID=0x00000024 Parent=0x00000022 SizeRef=0,57 Selected=0x433EF69B
+    DockNode    ID=0x00000025 Parent=0x00000022 SizeRef=0,7
+  DockNode      ID=0x00000023 Parent=0xB7B5E377 SizeRef=0,16 Selected=0xF14F0B90
+DockSpace       ID=0xB8EF20DE Window=0x3B9335D6 Pos=0,22 Size=1630,773 Split=X
   DockNode      ID=0x0000001E Parent=0xB8EF20DE SizeRef=12,0 Selected=0x367FCBD2
   DockNode      ID=0x0000001F Parent=0xB8EF20DE SizeRef=52,0 Split=X
     DockNode    ID=0x00000020 Parent=0x0000001F SizeRef=12,0
